[gd_scene load_steps=25 format=3 uid="uid://ceu60wp08ha24"]

[ext_resource type="Script" path="res://Upgrades/Macguffin.gd" id="1_j8k8l"]
[ext_resource type="Texture2D" uid="uid://py4lmq1p22cl" path="res://Graphics/Macguffin.png" id="2_leil8"]
[ext_resource type="Texture2D" uid="uid://brk7p56r2tra" path="res://Graphics/ui_a_press.png" id="4_pfh3w"]
[ext_resource type="PackedScene" uid="uid://80cq1ehkff6b" path="res://InteractableObjects/QuickAudioPlayer.tscn" id="4_qscqu"]
[ext_resource type="Texture2D" uid="uid://cyx2wh60x8dm4" path="res://Graphics/ui_enter_press.png" id="5_p3mhx"]
[ext_resource type="AudioStream" uid="uid://mmxm2c0u4wpy" path="res://SFX/MacguffinItem_Pickup.mp3" id="6_p8ftx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3wd1s"]
atlas = ExtResource("2_leil8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lluxx"]
atlas = ExtResource("2_leil8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8ia6"]
atlas = ExtResource("2_leil8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xny3"]
atlas = ExtResource("2_leil8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jrpyg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wd1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lluxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8ia6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xny3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3goda"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tt8a3"]
atlas = ExtResource("4_pfh3w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4xyd"]
atlas = ExtResource("4_pfh3w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1gah"]
atlas = ExtResource("4_pfh3w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62h5f"]
atlas = ExtResource("4_pfh3w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlw44"]
atlas = ExtResource("4_pfh3w")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p6i0s"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_tt8a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4xyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1gah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62h5f")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_hlw44")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pxmdd"]
atlas = ExtResource("5_p3mhx")
region = Rect2(0, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b23qa"]
atlas = ExtResource("5_p3mhx")
region = Rect2(36, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lberm"]
atlas = ExtResource("5_p3mhx")
region = Rect2(72, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfqm3"]
atlas = ExtResource("5_p3mhx")
region = Rect2(108, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re48v"]
atlas = ExtResource("5_p3mhx")
region = Rect2(144, 0, 36, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1dyaq"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_pxmdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b23qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lberm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfqm3")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_re48v")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="Macguffin" type="Area2D"]
texture_filter = 1
script = ExtResource("1_j8k8l")
metadata/DIALOGUE = ["You  picked  up  the  small,  red  flag  and  put  it  in  your  pocket.  It's  much  smaller  than  I  remember...  Maybe...  it's  enough  that  I  just  remember  them  moving  forward."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
position = Vector2(-7.15256e-07, -7.15256e-07)
rotation = -0.436332
sprite_frames = SubResource("SpriteFrames_jrpyg")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.421996

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3goda")

[node name="UI_Controller" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 6
texture_filter = 1
position = Vector2(0, -49)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_p6i0s")
animation = &"idle"
autoplay = "idle"

[node name="UI_Keyboard" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 6
texture_filter = 1
position = Vector2(0, -49)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_1dyaq")
animation = &"idle"
autoplay = "idle"

[node name="QuickAudioPlayer" parent="." instance=ExtResource("4_qscqu")]
unique_name_in_owner = true

[node name="SFX" type="AudioStreamPlayer2D" parent="QuickAudioPlayer"]
stream = ExtResource("6_p8ftx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
